--- a/booking.html
+++ b/booking.html
@@ -29,21 +29,21 @@
 
         
             <div class="image-grid">
-            <label for="item1" class="thumb"><img src="/images/badminton.jpg"><span>Badminton</span></label>
-            <label for="item2" class="thumb"><img src="/images/Basketball.jpg"><span>Basketball</span></label>
-            <label for="item3" class="thumb"><img src="/images/billiard.jpg"><span>Billiard</span></label>
-            <label for="item4" class="thumb"><img src="/images/bowling.jpg"><span>Bowling</span></label>
-            <label for="item5" class="thumb"><img src="/images/dancestudio.jpg"><span>Dance Studio</span></label>
-            <label for="item6" class="thumb"><img src="/images/dormitory.jpg"><span>Dormitory</span></label>
-            <label for="item7" class="thumb"><img src="/images/fitnessgym.jpg"><span>Fitness Gym</span></label>
-            <label for="item8" class="thumb"><img src="/images/functionhall.jpg"><span>Function Hall</span></label>
-            <label for="item9" class="thumb"><img src="/images/hotel.jpg"><span>Hotel</span></label>
-            <label for="item10" class="thumb"><img src="/images/ktv.jpg"><span>KTV</span></label>
-            <label for="item11" class="thumb"><img src="/images/littlechina.png"><span>Little China</span></label>
-            <label for="item12" class="thumb"><img src="/images/tabletennis.jpg"><span>Table Tennis</span></label>
-            <label for="item13" class="thumb"><img src="/images/topcafe.jpg"><span>Top Cafe</span></label>
-            <label for="item14" class="thumb"><img src="/images/volleyball.jpg"><span>Volleyball</span></label>
-            <label for="item15" class="thumb"><img src="/images/waterpark.jpg"><span>Waterpark</span></label>
+            <label for="item1" class="thumb"><img src="images/badminton.jpg"><span>Badminton</span></label>
+            <label for="item2" class="thumb"><img src="images/Basketball.jpg"><span>Basketball</span></label>
+            <label for="item3" class="thumb"><img src="images/billiard.jpg"><span>Billiard</span></label>
+            <label for="item4" class="thumb"><img src="images/bowling.jpg"><span>Bowling</span></label>
+            <label for="item5" class="thumb"><img src="images/dancestudio.jpg"><span>Dance Studio</span></label>
+            <label for="item6" class="thumb"><img src="images/dormitory.jpg"><span>Dormitory</span></label>
+            <label for="item7" class="thumb"><img src="images/fitnessgym.jpg"><span>Fitness Gym</span></label>
+            <label for="item8" class="thumb"><img src="images/functionhall.jpg"><span>Function Hall</span></label>
+            <label for="item9" class="thumb"><img src="images/hotel.jpg"><span>Hotel</span></label>
+            <label for="item10" class="thumb"><img src="images/ktv.jpg"><span>KTV</span></label>
+            <label for="item11" class="thumb"><img src="images/littlechina.png"><span>Little China</span></label>
+            <label for="item12" class="thumb"><img src="images/tabletennis.jpg"><span>Table Tennis</span></label>
+            <label for="item13" class="thumb"><img src="images/topcafe.jpg"><span>Top Cafe</span></label>
+            <label for="item14" class="thumb"><img src="images/volleyball.jpg"><span>Volleyball</span></label>
+            <label for="item15" class="thumb"><img src="images/waterpark.jpg"><span>Waterpark</span></label>
             </div>
 
             <!--Badminton-->
@@ -76,7 +76,7 @@
 
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/badminton1.jpg"><img src="/images/badminton2.jpg"><img src="/images/badminton3.jpg">
+                <img src="images/badminton1.jpg"><img src="images/badminton2.jpg"><img src="images/badminton3.jpg">
                 </div>
             </div>
             </div>
@@ -110,7 +110,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/basket1.jpg"><img src="/images/basket2.jpg"><img src="/images/basket3.jpg">
+                <img src="images/basket1.jpg"><img src="images/basket2.jpg"><img src="images/basket3.jpg">
                 </div>
             </div>
             </div>
@@ -144,7 +144,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/bill1.jpg"><img src="/images/bill2.jpg"><img src="/images/bill3.jpg">
+                <img src="images/bill1.jpg"><img src="images/bill2.jpg"><img src="images/bill3.jpg">
                 </div>
             </div>
             </div>
@@ -178,7 +178,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/bowl1.jpg"><img src="/images/bowl2.jpg"><img src="/images/bowl3.jpg">
+                <img src="images/bowl1.jpg"><img src="images/bowl2.jpg"><img src="images/bowl3.jpg">
                 </div>
             </div>
             </div>
@@ -212,7 +212,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/dance1.jpg"><img src="/images/dance2.jpg"><img src="/images/dance3.jpg">
+                <img src="images/dance1.jpg"><img src="images/dance2.jpg"><img src="images/dance3.jpg">
                 </div>
             </div>
             </div>
@@ -246,7 +246,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/dorm1.jpg"><img src="/images/dorm2.jpg"><img src="/images/dorm3.jpg">
+                <img src="images/dorm1.jpg"><img src="images/dorm2.jpg"><img src="images/dorm3.jpg">
                 </div>
 
             </div>
@@ -281,7 +281,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/fit1.jpg"><img src="/images/fit2.jpg"><img src="/images/fit3.jpg">
+                <img src="images/fit1.jpg"><img src="images/fit2.jpg"><img src="images/fit3.jpg">
                 </div>
 
             </div>
@@ -315,7 +315,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/function1.jpg"><img src="/images/function2.jpg"><img src="/images/function3.jpg">
+                <img src="images/function1.jpg"><img src="images/function2.jpg"><img src="images/function3.jpg">
                 </div>
 
             </div>
@@ -350,7 +350,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/hotel1.jpg"><img src="/images/hotel2.jpg"><img src="/images/hotel3.jpg">
+                <img src="images/hotel1.jpg"><img src="images/hotel2.jpg"><img src="images/hotel3.jpg">
                 </div>
 
             </div>
@@ -385,7 +385,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/ktv1.jpg"><img src="/images/ktv2.jpg"><img src="/images/ktv3.jpg">
+                <img src="images/ktv1.jpg"><img src="images/ktv2.jpg"><img src="images/ktv3.jpg">
                 </div>
             </div>
             </div>
@@ -419,7 +419,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/china1.png"><img src="/images/china2.png">
+                <img src="images/china1.png"><img src="images/china2.png">
                 </div>
 
             </div>
@@ -454,7 +454,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/table1.jpg"><img src="/images/table2.jpg">
+                <img src="images/table1.jpg"><img src="images/table2.jpg">
                 </div>
             </div>
             </div>
@@ -488,7 +488,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/cafe1.jpg"><img src="/images/cafe2.jpg"><img src="/images/cafe3.jpg">
+                <img src="images/cafe1.jpg"><img src="images/cafe2.jpg"><img src="images/cafe3.jpg">
                 </div>
 
             </div>
@@ -535,7 +535,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/indoor1.jpg"><img src="/images/indoor2.jpg"><img src="/images/outdoor1.jpg"><img src="/images/outdoor2.jpg">
+                <img src="images/indoor1.jpg"><img src="images/indoor2.jpg"><img src="images/outdoor1.jpg"><img src="images/outdoor2.jpg">
                 </div>
 
             </div>
@@ -570,7 +570,7 @@
                 </div>
                 <h2>Gallery</h2>
                 <div class="gallery">
-                <img src="/images/waterpark1.jpg"><img src="/images/waterpark2.jpg"><img src="/images/waterpark3.jpg">
+                <img src="images/waterpark1.jpg"><img src="images/waterpark2.jpg"><img src="images/waterpark3.jpg">
                 </div>
             </div>
             </div>
