--- a/booking.html
+++ b/booking.html
@@ -30,7 +30,7 @@
         
             <div class="image-grid">
             <label for="item1" class="thumb"><img src="images/badminton.jpg"><span>Badminton</span></label>
-            <label for="item2" class="thumb"><img src="images/Basketball.jpg"><span>Basketball</span></label>
+            <label for="item2" class="thumb"><img src="images/basketball.jpg"><span>Basketball</span></label>
             <label for="item3" class="thumb"><img src="images/billiard.jpg"><span>Billiard</span></label>
             <label for="item4" class="thumb"><img src="images/bowling.jpg"><span>Bowling</span></label>
             <label for="item5" class="thumb"><img src="images/dancestudio.jpg"><span>Dance Studio</span></label>
