--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Nov 9 to 11, 2025
                 <div class="slide-wrapper">
                     <div class="slides">
                         <img id="slide1" src="images/billiard.jpg" alt="slide1">
-                        <img id="slide2" src="images/basketball.jpg" alt="slide2">
-                        <img id="slide3" src="images/michael.jpg" alt="slide3">
+                        <img id="slide2" src="images/indoor2.jpg" alt="slide2">
+                        <img id="slide3" src="images/badminton1.jpg" alt="slide3">
                     </div>
                     <nav class="slide-navbar">
                         <a href="#slide1"></a>
